--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -30,9 +30,9 @@ But it must have the following features:
 
 <body>
   <div>
-    <img src="./assets/images/IMG-20241111-WA0025.jpg" alt="my-image">
-    <h1>That special moment</h1>
-    <p>When the match you've been waiting for arrives.</p>
+    <img src="./assets/images/njeri.JPG" alt="my-image">
+    <h1>proverbs 31:29 NIV</h1>
+    <p>"Many women do noble things but you surpass them all"</p>
   </div>
 </body>
 
