--- a/7.2 CSS Positioning/index.html
+++ b/7.2 CSS Positioning/index.html
@@ -5,6 +5,28 @@
   <title>CSS Positioning Exercise</title>
   <style>
     /* Write your code here */
+    p {
+      color: red;
+    }
+
+    .blue-box {
+      background-color: blue;
+      width: 500px;
+      height: 300px;
+      position: absolute;
+      left: 200px;
+      top: 200px;
+    }
+
+    .blue-box .red-circle {
+      background-color: red;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      position: relative;
+      left: 250px;
+      top: 150px;
+    }
   </style>
 </head>
 
