--- a/8.2 Responsiveness/grid.html
+++ b/8.2 Responsiveness/grid.html
@@ -8,7 +8,7 @@
   <style>
     .grid-container {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 3fr 1fr;
       grid-template-rows: 100px 200px 200px;
       gap: 30px;
     }
@@ -18,7 +18,7 @@
     }
 
     .card {
-      background-color: blue;
+      background-color: indigo;
     }
   </style>
 </head>
