--- a/8.2 Responsiveness/media-query.html
+++ b/8.2 Responsiveness/media-query.html
@@ -16,10 +16,20 @@
 
       /* CSS for screens below or equal to 600px wide */
       div {
-        height: 200px;
-        width: 200px;
+        height: 150px;
+        width: 150px;
+        background-color: aqua;
       }
-    }
+
+      @media (max-width: 300px) {
+
+        /* CSS for screens below or equal to 300px wide */
+        div {
+          height: 100px;
+          width: 100px;
+          background-color: red;
+        }
+      }
   </style>
 </head>
 
